--- a/unit-1/processing/style.css
+++ b/unit-1/processing/style.css
@@ -4,6 +4,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+*::selection {
+	background-color: #ff000088;
+}
+
 .transparent {
     background-color: transparent;
 }
